generated/nixidy/prod/forgejo/Service-forgejo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/service: forgejo
  name: forgejo
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: forgejo
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  type: ClusterIP
