generated/nixidy/prod/forgejo/HTTPRoute-forgejo.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: forgejo
  name: forgejo
  namespace: dotfiles
spec:
  hostnames:
    - forgejo.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: forgejo
          namespace: dotfiles
          port: 3000
          weight: 1
